--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meu Portfólio - Thiago Caldeira</title>
-  
-  <!-- Bootstrap e ícones -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
-
-  <!-- CSS personalizado -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="container text-center mt-4">
-    <img src="img/avatar-perfil.png" alt="Avatar de Thiago Caldeira" class="rounded-circle mt-3" width="150" height="150" />
+    <img src="avatar-perfil.png" alt="Avatar de Thiago Caldeira" class="rounded-circle mt-3" width="150" height="150" />
     <p class="lead mt-3">Thiago Caldeira</p>
     <h1>Estudante</h1>
     <p>
       Estudo na Escola Estadual Palmira Grassiotto Ferreira da Silva.<br />
       Atualmente estou no 2º ano do ensino médio.
     </p>
-
     <p><strong>Minhas habilidades:</strong></p>
     <div class="mb-4">
       <span class="badge bg-secondary">HTML</span>
@@ -31,14 +26,12 @@
       <span class="badge bg-secondary">GitHub</span>
     </div>
   </header>
-
   <main class="container">
     <h2 class="mb-4">Meus Projetos</h2>
     <div class="row">
-      <!-- Projeto 1 -->
       <div class="col-md-4">
         <div class="card">
-          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto Jogo de Corrida" />
+          <img src="projeto-1.png" class="card-img-top" alt="Imagem do projeto Jogo de Corrida" />
           <div class="card-body">
             <h5 class="card-title">Jogo de Corrida</h5>
             <p class="card-text">Projeto interativo para até 4 jogadores, onde o objetivo é cruzar a linha de chegada.</p>
@@ -47,10 +40,9 @@
           </div>
         </div>
       </div>
-      <!-- Projeto 2 -->
       <div class="col-md-4">
         <div class="card">
-          <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto Monalisa" />
+          <img src="projeto-2.png" class="card-img-top" alt="Imagem do projeto Monalisa" />
           <div class="card-body">
             <h5 class="card-title">Projeto Monalisa</h5>
             <p class="card-text">Os olhos da imagem seguem o ponteiro do mouse e, ao clicar, as cores mudam.</p>
@@ -59,10 +51,9 @@
           </div>
         </div>
       </div>
-      <!-- Projeto 3 -->
       <div class="col-md-4">
         <div class="card">
-          <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto Quente e Frio" />
+          <img src="projeto-3.png" class="card-img-top" alt="Imagem do projeto Quente e Frio" />
           <div class="card-body">
             <h5 class="card-title">Projeto Quente e Frio</h5>
             <p class="card-text">Uma esfera segue o mouse e, ao clicar, muda a cor do fundo e da esfera.</p>
@@ -73,23 +64,18 @@
       </div>
     </div>
   </main>
-
   <section id="contato" class="container">
     <h2>Entre em Contato</h2>
     <form>
       <label for="nome">Nome:</label>
       <input type="text" id="nome" class="form-control" required />
-
       <label for="email">Email:</label>
       <input type="email" id="email" class="form-control" required />
-
       <label for="mensagem">Mensagem:</label>
       <textarea id="mensagem" class="form-control" rows="4" required></textarea>
-
       <button type="submit" class="btn btn-primary mt-3">Enviar</button>
     </form>
   </section>
-
   <footer class="container">
     <h2>Conecte-se comigo</h2>
     <div>
@@ -98,8 +84,6 @@
     </div>
     <p class="mt-5">© 2025 - Desenvolvido por Thiago Caldeira</p>
   </footer>
-
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
